--- a/index.html
+++ b/index.html
@@ -15,45 +15,59 @@
   <main>
     <h1>Contact Us</h1>
 
-    <form action="/registration">
-      <div class="input-wrapper">
-        <label for="firstname">First Name</label>
-        <input type="text" name="firstname" id="firstname">
-        <span class="error-message">This field is required</span>
-      </div>
+    <div class="form-design">
+      <form action="/registration">
+        <div class="input-wrapper">
+          <label for="firstname">First Name</label>
+          <input type="text" name="firstname" id="firstname" required>
+          <span class="error-message">This field is required</span>
+        </div>
 
-      <div class="input-wrapper">
-        <label for="lastname">Last Name</label>
-        <input type="text" name="lastname" id="lastname">
-        <span class="error-message">This field is required</span>
-      </div>
+        <div class="input-wrapper">
+          <label for="lastname">Last Name</label>
+          <input type="text" name="lastname" id="lastname" required>
+          <span class="error-message">This field is required</span>
+        </div>
 
-      <div class="input-wrapper">
-        <label for="email">Email Address</label>
-        <input type="email" name="email-address" id="email" aria-describedby="error-message">
-        <span id="email-error" class="error-message">Please enter a valid email address</span>
-      </div>
+        <div class="input-wrapper">
+          <label for="email">Email Address</label>
+          <input type="email" name="email-address" id="email" aria-describedby="error-message" required>
+          <span id="email-error" class="error-message">Please enter a valid email address</span>
+        </div>
 
-      <div class="input-wrapper">
-        <label>Query Type</label>
-        <input type="radio" name="enquiry" value="General Enquiry">
-        <input type="radio" name="enquiry" value="Support Request">
-        <span class="error-message">Please select a query type</span>
-      </div>
+        <div class="input-wrapper">
+          <label>Query Type</label>
+          <label class="radio-box">
+            <input type="radio" name="enquiry" value="General Enquiry"> General Enquiry
+          </label>
 
-      <div class="input-wrapper">
-        <label for="message">Message</label>
-        <textarea name="message" id="message"></textarea>
-        <span class="error-message">This field is required</span>
-      </div>
+          <label class="radio-box">
+            <input type="radio" name="enquiry" value="Support Request">Support Request
+          </label>
+          <span class="error-message">Please select a query type</span>
+        </div>
 
-      I consent to being contacted by the team
-      <span class="error-message">To submit this form, please consent to being contacted</span>
+        <div class="input-wrapper">
+          <label for="message">Message</label>
+          <textarea name="message" id="message" required></textarea>
+          <span class="error-message">This field is required</span>
+        </div>
 
-      <div class="input-wrapper">
-        <input type="submit" id="submit" value="Submit">
-      </div>
-    </form>
+        <div class="input-wrapper">
+          <label>
+            <input type="checkbox" id="consent">
+            I consent to being contacted by the team
+          </label>
+          <span class="error-message">
+            To submit this form, please consent to being contacted
+          </span>
+        </div>
+
+        <div class="input-wrapper">
+          <input type="submit" id="submit" value="Submit">
+        </div>
+      </form>
+    </div>
   </main>
   <script src="./index.js"></script>
 </body>
