--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         </div>
 
         <div class="input-wrapper">
-          <label>
-            <input type="checkbox" id="consent">
+          <label class="form-control">
+            <input type="checkbox" id="consent" name="checkbox">
             I consent to being contacted by the team
           </label>
           <span class="error-message">
